--- a/languages/en.json
+++ b/languages/en.json
@@ -1,3 +1,9 @@
 {
-    "MODULE.hello": "hello"
+    "AE": {
+        "dialogs": {
+            "companionManager":{
+                "title": "Companion Manager"
+            }
+        }
+    }
 }
