--- a/languages/en.json
+++ b/languages/en.json
@@ -2,7 +2,11 @@
     "AE": {
         "dialogs": {
             "companionManager":{
-                "title": "Companion Manager"
+                "title": "Companion Manager",
+                "confirm": {
+                    "title": "Delete Companion",
+                    "content": "<p>Are you sure you want to delete this companion?</p>"
+                }
             }
         }
     }
