--- a/languages/en.json
+++ b/languages/en.json
@@ -8,6 +8,7 @@
                     "content": "<p>Are you sure you want to delete this companion?</p>"
                 }
             }
-        }
+        },
+        "actorSheetBtn": "Companions"
     }
 }
